# rag-pc4u

./: .coverage  .dockerignore  .env.example  .gitignore  .ingestion_state.json  JOURNAL.md  README.md  configuration-Webui.md  pyproject.toml  test
docker/: Dockerfile  docker-compose.yml
docs/: openapi_rag_pc4u.yaml
src/rag_pc4u/api/: dependencies.py  main.py  schemas.py  security.py
src/rag_pc4u/api/routes/: health.py  ingest.py  query.py
src/rag_pc4u/core/: QdrantDocumentStore.py  components.py  config.py  document_store.py  logger_config.py  logging.py  models.py  tenancy.py  tz_utils.py
src/rag_pc4u/core/custom_components/: csv_converter.py  enricher.py  extensionless.py  structured_converter.py  whisper_transcriber.py
src/rag_pc4u/dashboard/: api.py  run_dashboard.py  scheduler.py  state.py
src/rag_pc4u/dashboard/mapping/: dashboard_state.json
src/rag_pc4u/dashboard/static/: index.css  index.js
src/rag_pc4u/dashboard/templates/: index.css  index.html
src/rag_pc4u/ingestion/: nextcloud_watcher.py  pipeline.py  run.py  sources.py
src/rag_pc4u/ingestion/fichier_injecter/: .nextcloud_etag_Nextcloud%20Manual.pdf.json  .nextcloud_etag_Nextcloud.png.json
src/rag_pc4u/ingestion/nextcloud_cache/dsfdsfdsfdsfsdqsdds/: test.txt
src/rag_pc4u/retrieval/: pipeline.py  prompts.py  reranker.py  services.py
src/rag_pc4u/scripts/: precache_models.py
tests/: test  test_composants_critiques.py  test_health.py  test_qdrant.py  test_tenancy.py
